fix the overflow scrolling

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -264,7 +264,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   height: 100vh;
-  width: 100vw;
+  width: 80vw;
   left: 200px;
 }
 
